--- a/src/views/todo.ejs
+++ b/src/views/todo.ejs
@@ -3,9 +3,10 @@
 <div class="card text-white bg-secondary">
   <div class="card-header h3 bg-info"><i class="fas fa-clipboard-check"></i>&nbsp; MongoDB - Todo</div>
   <div class="card-body">
-    <a class="btn btn-md btn-success btn-lg" data-toggle="modal" data-target="#newModal" onClick="clearForm()"
-      ><i class="fa fa-edit"></i> NEW</a
-    >
+    <a class="btn btn-md btn-success btn-lg" data-toggle="modal" data-target="#newModal" onClick="clearForm()">
+      <i class="fa fa-edit"></i>
+      NEW
+    </a>
     <hr />
     <table class="table table-striped table-hover todo" id="todo-table">
       <tr>
