--- a/src/views/weather.ejs
+++ b/src/views/weather.ejs
@@ -1,12 +1,14 @@
 <%- include('_head.ejs') %>
 
 <div class="card text-white bg-secondary">
-  <div class="card-header bg-info h3"><i class="fa fa-globe"></i>&nbsp; Geolocated Weather</div>
+  <div class="card-header bg-info h3">
+    <i class="fa fa-globe"></i>&nbsp; Geolocated Weather <span id="location"></span>
+  </div>
   <div class="card-body">
     <div class="alert alert-warning fade" role="alert" id="error" style="color: #222"></div>
     <table>
       <tr>
-        <td><canvas id="weather_icon" width="256" height="256"></canvas></td>
+        <td><img src="" id="icon" /></td>
         <td class="weather-info">
           <ul id="weather-list"></ul>
         </td>
@@ -15,13 +17,12 @@
   </div>
 </div>
 
-<div>
-  <img src="images/darksky.png" height="64px" />
+<div style="padding: 1rem">
+  <img src="images/open-weather.png" height="64px" />
 </div>
 
 <template id="weather-template"> </template>
 
-<script src="js/skycons.js"></script>
 <script>
   const errElement = document.getElementById('error')
 
@@ -58,17 +59,14 @@
       if (!resp.ok) throw `Fetch /api/weather/${lat}/${long} failed with ${resp.statusText}`
       const weather = await resp.json()
 
-      var skycons = new Skycons({ color: '#3498db' })
-      skycons.add('weather_icon', weather.icon)
-      skycons.play()
-
+      document.getElementById('icon').src = `images/weather/${weather.icon}.png`
+      document.getElementById('location').textContent = ` - ${weather.location}`
       addWeatherDetails(`The weather currently is: &nbsp; ${weather.summary}`)
       addWeatherDetails(`The temperature is: &nbsp; ${weather.temp}°C`)
-      addWeatherDetails(`Chance of rain is: &nbsp; ${weather.precip}%`)
-      addWeatherDetails(`Wind speed is: &nbsp; ${weather.wind}mph`)
-      addWeatherDetails(`UV index is: &nbsp; ${weather.uv}`)
-      addWeatherDetails(`Forecast today: &nbsp; ${weather.forecastShort}`)
-      addWeatherDetails(`Forecast week: &nbsp; ${weather.forecastLong}`)
+      addWeatherDetails(`The temperature feels like: &nbsp; ${weather.tempFeels}°C`)
+      addWeatherDetails(`Cloud cover: &nbsp; ${weather.clouds}%`)
+      addWeatherDetails(`Volume of rain is: &nbsp; ${weather.rain}mm`)
+      addWeatherDetails(`Wind speed & direction: &nbsp; ${weather.wind}`)
     } catch (err) {
       errElement.classList.add('show')
       errElement.textContent = err
