--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,7 +10,7 @@
     <ul>
         <li>System status / information view</li>
         <li>App Insights support</li>
-        <li>Geolocated weather info (from DarkSky API)</li>
+        <li>Geolocated weather info (from OpenWeather API)</li>
         <li>Tools for triggering errors and high CPU load</li>
         <li>Mini todo app using MongoDB data store</li>
         <li>Support for user authentication with Azure AD</li>
@@ -23,9 +23,9 @@
     <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project on
       Github</a>
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    <img src='images/docker.png' width='58px' /> &nbsp;
-    <a target='_blank' href='https://hub.docker.com/r/bencuk/nodejs-demoapp' class="btn btn-info btn-lg">Docker images
-      on Dockerhub</a>
+    <img src='images/container.png' width='58px' /> &nbsp;
+    <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp/pkgs/container/nodejs-demoapp' class="btn btn-info btn-lg">Container Images
+      on GitHub</a>
   </p>
 
 
