--- a/src/views/monitor.ejs
+++ b/src/views/monitor.ejs
@@ -13,10 +13,10 @@
   <div class="card-body">
     <p class="card-text">
       <!-- Used by chart.js -->
-      <canvas id="memChart" width="500" height="200" style="background-color: white;"></canvas>
+      <canvas id="memChart" width="500" height="200"></canvas>
       <hr/>
       <!-- Used by chart.js -->
-      <canvas id="cpuChart" width="500" height="200" style="background-color: white;"></canvas>
+      <canvas id="cpuChart" width="500" height="200"></canvas>
     </p> 
   </div>
 </div>
