--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,45 +1,54 @@
 <%- include('_head.ejs') %>
 
-<div class="jumbotron">
-  <h2 class="bg-primary index-head"><img src='images/node-icon.svg' height='90px' /> Node.js Demo App</h2>
-  <hr />
-  <p class="lead">
+<div class="p-3 m-3 dark-translucent">
+  <h2 class="bg-primary p-3 rounded shadow">
+    <img src="images/node-icon.svg" height="90px" />
+    Node.js Demo App
+  </h2>
+
+  <div class="lead mt-4">
     This is a simple Node.js web app using the Express framework and EJS templates. It has been designed with cloud
-    demos & containers in mind. Demonstrating capabilities such as auto scaling, deployment to Azure or Kubernetes, or anytime you want 
-    something quick and lightweight to run & deploy 😄<br/><br/>Basic features:
-    <ul>
-        <li>System status / information view</li>
-        <li>App Insights support</li>
-        <li>Geolocated weather info (from OpenWeather API)</li>
-        <li>Tools for triggering errors and high CPU load</li>
-        <li>Mini todo app using MongoDB data store</li>
-        <li>Support for user authentication with Azure AD</li>
-      </ul> 
-  </p>
-  <br />
+    demos & containers in mind. Demonstrating capabilities such as auto scaling, deployment to Azure or Kubernetes, or
+    anytime you want something quick and lightweight to run & deploy 😄
+    <br />
+    <br />
+    Basic features:
+    <ul class="my-4 small">
+      <li>System status / information view</li>
+      <li>Azure App Insights support</li>
+      <li>Geolocated weather info (from OpenWeather API)</li>
+      <li>Tools for triggering errors and high CPU load</li>
+      <li>Mini todo app using MongoDB data store</li>
+      <li>Support for user authentication with Azure AD</li>
+    </ul>
+  </div>
 
-  <p>
-    <img src='images/octocat.png' width='58px' /> &nbsp;
-    <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project on
-      Github</a>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    <img src='images/container.png' width='58px' /> &nbsp;
-    <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp/pkgs/container/nodejs-demoapp' class="btn btn-info btn-lg">Container Images
-      on GitHub</a>
-  </p>
-
-
-  <hr style="background-color: #777" />
-
-  <p>
-    <img src='images/get-started.svg' width='58px' /> &nbsp;
-    <a target='_blank' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest'
-      class="btn btn-success btn-lg">Get started with Azure &amp; Node.js</a>
-  </p>
-
-
-  <br />
-  <p>Microsoft <i class="fa fa-heart"></i> Open Source</p>
+  <div class="row">
+    <div class="col-md d-flex flex-column align-items-center pb-4">
+      <img src="images/octocat.png" height="80px" />
+      <a target="_blank" href="https://github.com/benc-uk/nodejs-demoapp" class="btn btn-info btn-lg mt-2">
+        Github Project
+      </a>
+    </div>
+    <div class="col-md d-flex flex-column align-items-center pb-4">
+      <img src="images/container.png" height="80px" />
+      <a
+        target="_blank"
+        href="https://github.com/benc-uk/nodejs-demoapp/pkgs/container/nodejs-demoapp"
+        class="btn btn-info btn-lg mt-2">
+        Container Images
+      </a>
+    </div>
+    <div class="col-md d-flex flex-column align-items-center pb-4">
+      <img src="images/get-started.svg" height="80px" />
+      <a
+        target="_blank"
+        href="https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest"
+        class="btn btn-info btn-lg mt-2">
+        Get Started
+      </a>
+    </div>
+  </div>
 </div>
 
 <%- include('_foot.ejs') %>
