--- a/src/views/weather.ejs
+++ b/src/views/weather.ejs
@@ -2,26 +2,25 @@
 
 <div class="card text-white bg-secondary">
   <div class="card-header bg-info h3">
-    <i class="fa fa-globe"></i>&nbsp; Geolocated Weather <span id="location"></span>
+    <i class="fa fa-globe"></i>
+    &nbsp; Geolocated Weather
+    <span id="location"></span>
   </div>
   <div class="card-body">
-    <div class="alert alert-warning fade" role="alert" id="error" style="color: #222"></div>
-    <table>
-      <tr>
-        <td><img src="" id="icon" /></td>
-        <td class="weather-info">
-          <ul id="weather-list"></ul>
-        </td>
-      </tr>
-    </table>
+    <div class="alert alert-warning fade text-dark" role="alert" id="error"></div>
+
+    <div class="row">
+      <div class="col-7"><ul id="weather-list"></ul></div>
+      <div class="col"><i id="weatherIcon" class="owi"></i></div>
+    </div>
   </div>
 </div>
 
-<div style="padding: 1rem">
+<div class="p-4">
   <img src="images/open-weather.png" height="64px" />
 </div>
 
-<template id="weather-template"> </template>
+<template id="weather-template"></template>
 
 <script>
   const errElement = document.getElementById('error')
@@ -59,8 +58,7 @@
       if (!resp.ok) throw `Fetch /api/weather/${lat}/${long} failed with ${resp.statusText}`
       const data = await resp.json()
 
-      const icon = data.weather[0].icon.replace('n', 'd')
-      document.getElementById('icon').src = `images/weather/${icon}.png`
+      document.getElementById('weatherIcon').classList.add(`owi-${data.weather[0].icon}`)
       document.getElementById('location').textContent = ` - ${data.name}`
       addWeatherDetails(`The weather currently is: &nbsp; ${data.weather[0].description}`)
       addWeatherDetails(`Current temperature: &nbsp; ${data.main.temp}°C`)
