--- a/src/views/tools.ejs
+++ b/src/views/tools.ejs
@@ -7,32 +7,32 @@
   </div>
 
   <% if(typeof message !== "undefined" && message) { %>
-  <div class="alert alert-light alert-dismissible" role="alert" data-dismiss="alert" aria-label="Close">
-    <p class="h4"><%= message %></p>
+  <div class="alert alert-light alert-dismissible text-dark m-2" role="alert" data-bs-dismiss="alert" aria-label="Close">
+    <p class="h4"><%= message %></div>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <% } %>
 
   <div class="card-body h5">
-    <p>
+    <div class="m-2">
       <a class="btn btn-primary btn-lg w-25" href="/tools/load">CPU Load</a>
       &nbsp; Generate forced CPU load
-    </p>
+    </div>
 
-    <p>
+    <div class="m-2">
       <a class="btn btn-primary btn-lg w-25" href="/tools/error">Exception</a>
       &nbsp; Will trigger a runtime exception
-    </p>
+    </div>
 
-    <p>
+    <div class="m-2">
       <a class="btn btn-primary btn-lg w-25" href="/pagemissing">404 Page</a>
       &nbsp; Trigger a 404
-    </p>
+    </div>
 
-    <p>
+    <div class="m-2">
       <a class="btn btn-primary btn-lg w-25" href="/tools/gc">Garbage Collect</a>
       &nbsp; Force garbage collector to run
-    </p>
+    </div>
   </div>
 </div>
 
