--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,7 +35,8 @@
       <a
         target="_blank"
         href="https://github.com/benc-uk/nodejs-demoapp/pkgs/container/nodejs-demoapp"
-        class="btn btn-info btn-lg mt-2">
+        class="btn btn-info btn-lg mt-2"
+      >
         Container Images
       </a>
     </div>
@@ -44,9 +45,21 @@
       <a
         target="_blank"
         href="https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest"
-        class="btn btn-info btn-lg mt-2">
+        class="btn btn-info btn-lg mt-2"
+      >
         Get Started
       </a>
+    </div>
+
+    <div class="pt-5 h5">
+      <a
+        class="btn btn-sm btn-primary"
+        href="https://github.com/benc-uk/nodejs-demoapp/wiki/Containerized-Demo-Web-Apps"
+        target="_blank"
+      >
+        🚀 Demo Apps Collection
+      </a>
+      &mdash; For more demo apps in different languages &amp; frameworks
     </div>
   </div>
 </div>
