--- a/src/todo/todo.ejs
+++ b/src/todo/todo.ejs
@@ -1,20 +1,25 @@
 <%- include('_head.ejs') %>
 
 <div class="card text-white bg-secondary">
-  <div class="card-header h3 bg-info"><i class="fas fa-clipboard-check"></i>&nbsp; MongoDB - Todo</div>
+  <div class="card-header h3 bg-info">
+    <i class="fas fa-clipboard-check"></i>
+    &nbsp; MongoDB - Todo
+  </div>
   <div class="card-body">
-    <a class="btn btn-md btn-success btn-lg" data-toggle="modal" data-target="#newModal" onClick="clearForm()">
+    <a class="btn btn-md btn-success btn-lg" data-bs-toggle="modal" data-bs-target="#newModal" onClick="clearForm()">
       <i class="fa fa-edit"></i>
       NEW
     </a>
     <hr />
-    <table class="table table-striped table-hover todo" id="todo-table">
-      <tr>
-        <th>Done</th>
-        <th>Title</th>
-        <th>Type</th>
-        <th>&nbsp;</th>
-      </tr>
+    <table class="table table-dark table-striped table-hover todo">
+      <tbody id="todo-table">
+        <tr>
+          <th>Done</th>
+          <th>Title</th>
+          <th>Type</th>
+          <th>&nbsp;</th>
+        </tr>
+      </tbody>
     </table>
   </div>
 </div>
@@ -25,9 +30,7 @@
     <div class="modal-content bg-primary text-white">
       <div class="modal-header bg-info">
         <h5 class="modal-title" id="exampleModalLabel">Create Todo Item</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="form-group">
@@ -45,8 +48,8 @@
         </div>
       </div>
       <div class="modal-footer bg-primary">
-        <button type="button" class="btn btn-success" data-dismiss="modal" onClick="addNewTodo()">Add Todo</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal" onClick="addNewTodo()">Add Todo</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
