--- a/src/views/tools.ejs
+++ b/src/views/tools.ejs
@@ -1,29 +1,38 @@
 <%- include('_head.ejs') %>
 
 <div class="card text-white bg-secondary">
-  <div class="card-header bg-info h3"><i class="fa fa-tools"></i>&nbsp; Tools & Debug</div>
+  <div class="card-header bg-info h3">
+    <i class="fa fa-tools"></i>
+    &nbsp; Tools & Debug
+  </div>
 
   <% if(typeof message !== "undefined" && message) { %>
-  <div class="alert alert-light alert-dismissible fade show m-3" role="alert" data-dismiss="alert" aria-label="Close">
-    <p class="h4"><%= message %></p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
+  <div class="alert alert-light alert-dismissible text-dark m-2" role="alert" data-bs-dismiss="alert" aria-label="Close">
+    <p class="h4"><%= message %></div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <% } %>
 
   <div class="card-body h5">
-    <p><a class="btn btn-primary btn-lg w-25" href="/tools/load">CPU Load</a> &nbsp; Generate forced CPU load</p>
+    <div class="m-2">
+      <a class="btn btn-primary btn-lg w-25" href="/tools/load">CPU Load</a>
+      &nbsp; Generate forced CPU load
+    </div>
 
-    <p>
-      <a class="btn btn-primary btn-lg w-25" href="/tools/error">Exception</a> &nbsp; Will trigger a runtime exception
-    </p>
+    <div class="m-2">
+      <a class="btn btn-primary btn-lg w-25" href="/tools/error">Exception</a>
+      &nbsp; Will trigger a runtime exception
+    </div>
 
-    <p><a class="btn btn-primary btn-lg w-25" href="/pagemissing">404 Page</a> &nbsp; Trigger a 404</p>
+    <div class="m-2">
+      <a class="btn btn-primary btn-lg w-25" href="/pagemissing">404 Page</a>
+      &nbsp; Trigger a 404
+    </div>
 
-    <p>
-      <a class="btn btn-primary btn-lg w-25" href="/tools/gc">Garbage Collect</a> &nbsp; Force garbage collector to run
-    </p>
+    <div class="m-2">
+      <a class="btn btn-primary btn-lg w-25" href="/tools/gc">Garbage Collect</a>
+      &nbsp; Force garbage collector to run
+    </div>
   </div>
 </div>
 
